@@ -3,16 +3,11 @@ package dk.sdu.mmmi.cbse.main;
 import dk.sdu.mmmi.cbse.common.services.IEntityProcessingService;
 import dk.sdu.mmmi.cbse.common.services.IGamePluginService;
 import dk.sdu.mmmi.cbse.common.services.IPostEntityProcessingService;
+import dk.sdu.mmmi.cbse.common.util.ServiceLocator;
 import java.util.List;
-import java.util.ServiceLoader;
-import static java.util.stream.Collectors.toList;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
-/**
- *
- * @author jcs
- */
 @Configuration
 class ModuleConfig {
     
@@ -20,22 +15,24 @@ class ModuleConfig {
     }
 
     @Bean
-    public Game game(){
-        return new Game(gamePluginServices(), entityProcessingServiceList(), postEntityProcessingServices());
+    public Game game() {
+        return new Game();
     }
 
     @Bean
-    public List<IEntityProcessingService> entityProcessingServiceList(){
-        return ServiceLoader.load(IEntityProcessingService.class).stream().map(ServiceLoader.Provider::get).collect(toList());
+    public List<IEntityProcessingService> entityProcessingServiceList() {
+        return ServiceLocator.INSTANCE.locateAll(IEntityProcessingService.class);
     }
 
     @Bean
     public List<IGamePluginService> gamePluginServices() {
-        return ServiceLoader.load(IGamePluginService.class).stream().map(ServiceLoader.Provider::get).collect(toList());
+        return ServiceLocator.INSTANCE.locateAll(IGamePluginService.class).stream()
+                .filter(plugin -> !plugin.getClass().getModule().getName().equals("enemysystem"))
+                .toList();
     }
 
     @Bean
     public List<IPostEntityProcessingService> postEntityProcessingServices() {
-        return ServiceLoader.load(IPostEntityProcessingService.class).stream().map(ServiceLoader.Provider::get).collect(toList());
+        return ServiceLocator.INSTANCE.locateAll(IPostEntityProcessingService.class);
     }
 }
